[package]
name = "servo_rand"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
edition = "2021"
publish = false

[lib]
name = "servo_rand"
path = "lib.rs"

[dependencies]
lazy_static = "1"
log = "0.4"
rand = "0.8.5"
rand_core = "0.6.4"
rand_isaac = "0.3.0"
uuid = "0.8"
